# modelo_ATML

./: README.md  inference.py  main.py  paine_gui.py  pyproject.toml  test.py  web_server.py
modelo_finetuned_local/checkpoint-1000/: adapter_config.json  rng_state.pth  trainer_state.json
modelo_finetuned_local/checkpoint-600/: rng_state.pth  scheduler.pt  trainer_state.json
modelo_finetuned_local/checkpoint-800/: rng_state.pth  scheduler.pt  trainer_state.json
static/: index.html
